--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-04-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Split vowel AM ligature rule.
+
+	* fonts/Khottabun.sfd:
+	  - Split vowel AM ligature rule into separate 'ccmp' and 'pstf'
+	    lookups. Old lookups ignore marks, which makes MAI KANG ignored.
+	  - Bump font version to 001.006.
+
 2013-04-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Add 'lana' script tag to GPOS.
