--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-07-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Actually set unicode value for uni0EE6.
+
+	* fonts/Khottabun.sfd:
+	  - Set unicode value and glyph class for uni0EE6.
+	  - Bump font version to 002.006.
+
 2013-07-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Reallocate Tai Noi extension.
