--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Add Tai Noi subjoined NO NU.
+
+	* fonts/Khottabun.sfd:
+	  - Add glyph for Tai Noi subjoined NO NU at temporary code point
+	    uni0EE9.
+	  - Bump font version to 002.011.
+
 2013-12-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Add Tai Noi subjoined CHO CHAN.
