--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-05-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Scale glyphs by 150% to match Thai and Western fonts.
+
+	* fonts/Khottabun.sfd:
+	  - Scale glyphs by 150%
+	  - Scale PS Private values, too.
+	  - Apply autohint to all glyphs.
+	  - Bump font version to 002.018.
+
 2014-02-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Use ZWJ to join Tai Noi conjuncts.
